<resources>
    <string name="app_name">Weather Map</string>
    <string name="main_title">Openweathermap.org Forecast</string>
    <string name="saved_locations">Saved locations</string>
    <string name="query_hint">Select city</string>
    <string name="no_results">No forecast to show</string>
    <string name="api_error">Problem fetching the forecast</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_direction">Direction</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="temperature">Temperature</string>
    <string name="feels_like">Feels like</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="instructions">Tap on the map to save a new location and fetch its 5 day / 3 hour forecast.\n\n
        Select previous locations from the drop-down menu.\n\n
        Tap on a forecast to get more detail.\n\n
        Long-press on a forecast to share it.
    </string>

    <string name="mapbox_access_token" translatable="false">pk.eyJ1Ijoic3NoZWV0ejc4IiwiYSI6ImNrdTQxZnl4ZTFneWwydnFyYmtmcDk3dmEifQ.aa-WLGMDfZV7EMK0l0Cd-Q</string>

</resources>