<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity"
    android:background="@color/light_blue">

    <TextView
        android:id="@+id/tv_place_name"
        android:layout_width="379dp"
        android:layout_height="50dp"
        android:gravity="center"
        tools:text="Grand Canyon Village"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/img_weather" />

    <ImageView
        android:id="@+id/img_weather"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:foregroundGravity="fill"
        android:background="#FFBBCCFF"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_place_name"
         />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="67dp"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/latitude"
        app:layout_constraintStart_toEndOf="@+id/img_weather"
        app:layout_constraintTop_toBottomOf="@+id/tv_place_name"
        app:layout_constraintBottom_toTopOf="@id/textView12"
        app:layout_constraintEnd_toStartOf="@id/tv_latitude" />

    <TextView
        android:id="@+id/tv_latitude"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:gravity="center"
        tools:text="45.454354533"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        app:layout_constraintBottom_toBottomOf="@id/textView11"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="67dp"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/longitude"
        app:layout_constraintStart_toEndOf="@+id/img_weather"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toStartOf="@id/tv_longitude"
        app:layout_constraintBottom_toTopOf="@id/tv_time" />

    <TextView
        android:id="@+id/tv_longitude"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:gravity="center"
        tools:text="34.54353453"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        app:layout_constraintBottom_toBottomOf="@id/textView12" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="126dp"
        android:layout_height="63dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        tools:text="Wednesday\n08:00pm"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="@id/textView12"
        app:layout_constraintBottom_toBottomOf="@+id/img_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_weather" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="376dp"
        android:layout_height="42dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        tools:text="partly cloudy"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_weather"
        app:layout_constraintBottom_toTopOf="@id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/temperature"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_temperature"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="161dp"
        android:layout_height="45dp"
        android:gravity="center"
        tools:text="110 F"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_feels_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
         />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/feels_like"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/tv_feels_like"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView7"/>

    <TextView
        android:id="@+id/tv_feels_like"
        android:layout_width="161dp"
        android:layout_height="45dp"
        android:gravity="center"
        tools:text="43 F"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView6"
        app:layout_constraintBottom_toTopOf="@id/tv_pressure"
         />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/pressure"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_pressure"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView8"/>

    <TextView
        android:id="@+id/tv_pressure"
        android:layout_width="161dp"
        android:layout_height="45dp"
        android:gravity="center"
        tools:text="1100"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintBottom_toTopOf="@id/tv_humidity"
        />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/humidity"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_humidity"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="161dp"
        android:layout_height="45dp"
        android:gravity="center"
        tools:text="45%"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintBottom_toTopOf="@id/tv_wind_speed"
         />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/wind_speed"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/tv_wind_speed"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView10"
        />

    <TextView
        android:id="@+id/tv_wind_speed"
        android:layout_width="161dp"
        android:layout_height="45dp"
        android:gravity="center"
        tools:text="12 m/s"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintBottom_toTopOf="@id/tv_wind_direction"
        />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/wind_direction"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_wind_direction"
        app:layout_constraintBottom_toBottomOf="parent"
         />

    <TextView
        android:id="@+id/tv_wind_direction"
        android:layout_width="161dp"
        android:layout_height="45dp"
        android:gravity="center"
        tools:text="123 degrees"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/textView10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>